feat : correction bugs #50